<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BACKGROUND"
    android:id="@+id/translator_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TraductorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toTopOf="@+id/multiText1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/multiText1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/titulo"
            style="@style/TEXTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="top"
            android:text="Traductor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/multiText1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/multiText1"
            style="@style/TRANSLATOR_TEXT_BOXES"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="35dp"
            android:elevation="18dp"
            android:ems="10"
            android:gravity="start|top"
            android:hapticFeedbackEnabled="false"
            android:hint="Introduzca texto"
            android:inputType="textMultiLine"
            android:maxLength="2000"
            android:paddingBottom="30dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible"
            app:guidelineUseRtl="false"
            app:layout_constraintBottom_toTopOf="@id/multiText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:elevation="19dp"
            android:id="@+id/charCounter"
            style="@style/SUBTEXTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/less_smoke"
            android:text="0/2000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/multiText1"
            app:layout_constraintEnd_toEndOf="@+id/multiText1" />

        <EditText
            android:id="@+id/multiText2"
            style="@style/TRANSLATOR_TEXT_BOXES"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:elevation="18dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:hint="Texto traducido"
            android:inputType="textMultiLine"
            android:paddingBottom="50dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiText1"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/COPY_ICON_BUTTON"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_bt"
            android:elevation="18dp"
            android:onClick="copyButtonPressed"
            android:tooltipText="Copiar texto"
            app:layout_constraintBottom_toBottomOf="@+id/multiText2"
            app:layout_constraintEnd_toEndOf="@+id/multiText2" />


        <Button
            android:id="@+id/buttonTrad"
            style="@style/TRANSLATE_BUTTON"
            android:layout_width="262dp"
            android:layout_height="46dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:elevation="14dp"
            android:onClick="buttonPressed"
            android:text="Traducir"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_destination_lang" />


        <Spinner
            android:id="@+id/spinner_origin_lang"
            style="@style/TRANSLATOR_INPUT_LANG_BUTTON"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="0px"
            android:layout_marginBottom="31dp"
            android:layout_marginStart="300px"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTrad"
            app:layout_constraintEnd_toStartOf="@id/spinner_destination_lang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiText2"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinner_destination_lang"
            style="@style/TRANSLATOR_OUTPUT_LANG_BUTTON"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0px"
            android:layout_marginEnd="300px"
            android:layout_marginTop="70dp"
            android:paddingStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTrad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinner_origin_lang"
            app:layout_constraintTop_toBottomOf="@+id/multiText2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>