<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/traductor"
        android:title="Traductor"
        android:icon="@drawable/translate_fill0_wght400_grad0_opsz24"/>
    <item
        android:id="@+id/historial"
        android:title="Historial"
        android:icon="@drawable/history_fill0_wght400_grad0_opsz24"/>
    <item
        android:id="@+id/ajustes"
        android:icon="@drawable/settings_fill0_wght400_grad0_opsz24"
        android:title="Ajustes" />
</menu>
